<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MainActivity resources -->
    <string name="app_name">SwitchaBLE</string>
    <string name="alarm_button_label">Alarms</string>
    <string name="devices_button_label">Devices</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="alarm_deletion">Alarm deleted</string>
    <string name="alarm_repeat">Alarm repeating</string>
    <string name="action_new">New alarm</string>
    <string name="action_edit">Edit alarm</string>
    <string name="action_delete">Delete alarm</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    
    <string name="sunday_initial">S</string>
    <string name="monday_initial">M</string>
    <string name="tuesday_initial">T</string>
	<string name="wednesday_initial">W</string>
	<string name="thursday_initial">T</string>
	<string name="friday_initial">F</string>
	<string name="saturday_initial">S</string>
	
	<!-- BLE DeviceScanActivity resources -->
	<string name="error_bluetooth_not_supported">BLE not supported by device.</string>
	
	<string name="menu_scan">Scan</string>
	<string name="menu_stop">Stop</string>
	<string name="menu_refresh">Refresh</string>
	
	<!-- BLE LeDeviceListAdapter resources -->
	<string name="unknown_device">Unknown BLE Device</string>
	
	<string name="title_activity_peripheral">Peripheral</string>
    <string name="title_activity_hrdemo">HRDemoActivity</string>
</resources>
