<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/action_new"
          android:showAsAction="always"
          android:icon="@drawable/ic_action_add_alarm"
          android:title="@string/action_new"/>
    
    <item android:id="@+id/action_edit"
          android:showAsAction="always"
          android:icon="@drawable/ic_action_edit"
          android:title="@string/action_edit"/>
    
    <item android:id="@+id/action_delete"
          android:showAsAction="always"
          android:icon="@drawable/ic_action_delete"
          android:title="@string/action_delete"/>
    
    <item android:id="@+id/action_settings"
          android:showAsAction="always"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/action_settings"/>
        
    <item android:id="@+id/action_help"
          android:showAsAction="always"
          android:icon="@drawable/ic_action_help"
          android:title="@string/action_help"/>

    
</menu>